tests/snapshots/repl_tests__tests__todo_panel_multiple_items.snap
---
source: tests/repl_tests.rs
assertion_line: 865
expression: "lines.join(\"\\n\")"
---
┌ + TODO ────────────────────┐
│● #1 First task             │
│◐ #2 Second task            │
│○ #3 Third task             │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
