tests/snapshots/repl_tests__tests__todo_panel_narrow.snap
---
source: tests/repl_tests.rs
assertion_line: 952
expression: "lines.join(\"\\n\")"
---
┌ + TODO ──────────┐
│○ #1 Task         │
│                  │
│                  │
└──────────────────┘
