tests/snapshots/repl_tests__tests__todo_panel_single_cancelled.snap
---
source: tests/repl_tests.rs
assertion_line: 824
expression: "lines.join(\"\\n\")"
---
┌ + TODO ────────────────────┐
│x #4 Deprecated feature     │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
