tests/snapshots/repl_tests__tests__todo_panel_single_completed.snap
---
source: tests/repl_tests.rs
assertion_line: 797
expression: "lines.join(\"\\n\")"
---
┌ + TODO ────────────────────┐
│● #3 Fix bug                │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
