tests/snapshots/repl_tests__tests__todo_panel_single_in_progress.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ ✓ TODO ────────────────────┐
│◐ #2 Implement feature      │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
