tests/snapshots/repl_tests__tests__todo_panel_single_pending.snap
---
source: tests/repl_tests.rs
assertion_line: 743
expression: "lines.join(\"\\n\")"
---
┌ + TODO ────────────────────┐
│○ #1 Write documentation    │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
